# xiayu

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
.vim/: coc-settings.json
derive/: Cargo.toml
derive/src/: lib.rs
entity-examples/: Cargo.toml
entity-examples/src/: lib.rs
examples/: basic.rs
src/: error.rs  lib.rs  macros.rs  serde.rs
src/ast/: column.rs  compare.rs  conjunctive.rs  cte.rs  delete.rs  expression.rs  function.rs  grouping.rs  insert.rs  join.rs  merge.rs  mod.rs  ordering.rs  row.rs  select.rs  table.rs  union.rs  update.rs  values.rs
src/ast/function/: aggregate_to_string.rs  average.rs  coalesce.rs  count.rs  json_extract.rs  lower.rs  maximum.rs  minimum.rs  row_number.rs  row_to_json.rs  search.rs  sum.rs  upper.rs
src/databases/: has_value.rs  has_visitor.rs  mod.rs  try_bind.rs
src/databases/mssql/: mod.rs  value.rs
src/databases/mysql/: mod.rs  value.rs
src/databases/postgres/: mod.rs  value.rs
src/databases/sqlite/: mod.rs  value.rs
src/visitors/: mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
tests/: basic.rs
