[package]
name = "xiayu"
version = "0.1.0-alpha0"
edition = "2018"
authors = ["songww <sww4718168@163.com>"]
description = "ORM powered by SQLx."
documentation = "https://docs.rs/xiayu"
homepage = "https://github.com/songww/xiayu"
keywords = ["orm", "sqlx", "sqlite", "mysql", "mssql", "postgresql"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "xiayu"

[dependencies]
xiayu-derive = { version = "0.1.0-alpha0", path = "./derive" }

async-trait = "0.1"
base64 = { version = "0.13", optional = true }
derive_more = { version = "0.99", features = ["as_ref", "as_mut", "deref", "deref_mut"] }
either = { version = "1.6", optional = true }
hex = "0.4"
indoc = { version = "1.0", optional = true }
num = { version = "0.4", optional = true }
num-bigint = { version = "0.4", optional = true }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
sqlx = { version = "0.5" }

[dev-dependencies]
tokio = { version = "1.10", features = [ "rt", "macros" ] }
entities = { path = "./entity-examples", package = "xiayu-entity-examples" }

[build-dependencies]
cfg_aliases = "0.1"

[features]
default = [ "uuid", "json", "chrono", "decimal", "bigdecimal" ]
_docs = [ "sqlx/runtime-tokio-rustls", "sqlx/mysql", "sqlx/mssql", "sqlx/sqlite", "sqlx/postgres", "json", "uuid", "chrono", "decimal", "bigdecimal" ]
mssql = [ "uuid", "chrono", "either", "sqlx/mssql", "indoc" ]
mysql = [ "sqlx/mysql" ]
sqlite = [ "sqlx/sqlite" ]
postgres = [ "sqlx/postgres" ]
uuid = [ "sqlx/uuid" ]
json = [ "base64", "sqlx/json", "serde", "serde_json", "num/serde" ]
chrono = [ "sqlx/chrono" ]
decimal = [ "sqlx/decimal" ]
bigdecimal = [ "num", "num-bigint", "sqlx/bigdecimal" ]
time = [ "sqlx/time" ]
ipnetwork = [ "sqlx/ipnetwork" ]

[workspace]
members = [
    "derive",
    "entity-examples"
]
