[package]
name = "xiayu-derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
darling = { version = "0.13", features = ["diagnostics"] }
proc-macro-crate = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
