[package]
name = "xiayu-derive"
version = "0.1.0-alpha0"
edition = "2018"
authors = ["songww <sww4718168@163.com>"]
description = "ORM powered by SQLx."
documentation = "https://docs.rs/xiayu"
homepage = "https://github.com/songww/xiayu"
keywords = ["orm", "sqlx", "sqlite", "mysql", "mssql", "postgresql"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
darling = { version = "0.13", features = ["diagnostics"] }
proc-macro-crate = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
